<resources>
    <string name="app_name">NutriCount</string>
    <string name="username_or_email_Input">Username or Email</string>
    <string name="password_Input">Password</string>
    <string name="sign_in_Btn">Sign-In</string>
    <string name="sign_up_Btn">Sign-Up</string>
    <string name="reg1_cancel_Btn">Back</string>
    <string name="reg1_register_Text">REGISTER</string>
    <string name="reg1_description_Text">Please fill the correct information below.</string>
    <string name="reg1_first_name_Text">First Name</string>
    <string name="reg1_last_name_Text">Last Name</string>
    <string name="reg1_fname_TextInput">first name</string>
    <string name="reg1_lname_TextInput">last name</string>
    <string name="reg1_birthday_Text">Birthday</string>
    <string name="reg1_birthday_TextInput">birthday</string>
    <string name="reg1_gender_Text">Gender</string>
    <string name="reg1_male_RBtn">Male</string>
    <string name="reg1_female_RBtn">Female</string>
    <string name="reg1_email_Text">E-Mail</string>
    <string name="reg1_email_TextInput">e-mail</string>
    <string name="reg1_password_Text">Password</string>
    <string name="reg1_password_TextInput">password</string>
    <string name="reg1_confirm_password_Text">Confirm Password</string>
    <string name="reg1_confirm_password_TextInput">confirm password</string>
    <string name="reg1_next_Btn">Next</string>
    <string name="reg2_back_Text">Back</string>
    <string name="reg2_register_Text">REGISTER</string>
    <string name="reg2_height_cm_Text">Height (cm)</string>
    <string name="reg2_heightcm_InputText">cm</string>
    <string name="reg2_weight_kg_Text">Weight (kg)</string>
    <string name="reg2_weightkg_TextInput">kg</string>
    <string name="Reg2_goal_weight_kg_Text">Goal Weight (kg)</string>
    <string name="reg2_GWkg_TextInput">kg</string>
    <string name="reg2_ins_Text">Select if you have allergies to:</string>
    <string name="reg2_milk_CheckBox">Milk</string>
    <string name="reg2_nuts_CheckBox">Nuts</string>
    <string name="reg2_peanuts_CheckBox">Peanuts</string>
    <string name="reg2_soyCheckBox">Soy</string>
    <string name="reg2_shrimp_CheckBox">Shrimp</string>
    <string name="reg2_gluten_CheckBox">Gluten</string>
    <string name="reg2_celery_CheckBox">Celery</string>
    <string name="reg2_eggs_CheckBox">Eggs</string>
    <string name="reg2_sesame_seeds_CheckBox">Sesame Seeds</string>
    <string name="reg2_fish_CheckBox">Fish</string>
    <string name="reg2_others_Text">Others:</string>
    <string name="reg2_please_specify_TextInput">please specify</string>
    <string name="reg2_termofservice_text">By signing up, you agree to the Terms of Service.</string>
    <string name="reg2_register_Btn">REGISTER</string>
    <string name="inputHeight">cm</string>
    <string name="otp_back_Text">Back</string>
    <string name="otp_VC_Text">Verification Code</string>
    <string name="otp_desc_Text">Please enter verification code sent to your E-mail</string>
    <string name="otp_Num1">0</string>
    <string name="otp_Num2">0</string>
    <string name="otp_Num3">0</string>
    <string name="otp_Num4">0</string>
    <string name="otp_Num5">0</string>
    <string name="otp_Num6">0</string>
    <string name="imglogo">imgLogo</string>
    <string name="imgbanner">imgBanner</string>
    <string name="imgvbg">imgVbg</string>
    <string name="imggbg">imggbg</string>
    <string name="title_activity_dashbord">Dashbord</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="dashboard">Dashboard</string>
    <string name="imgdlogo">imgDLogo</string>
    <string name="btncamerabg">btnCameraBG</string>
    <string name="btncameralogo">btnCameraLogo</string>
    <string name="progress">Progress</string>
    <string name="planner">Planner</string>
    <string name="profile">Profile</string>
    <string name="recommended_videos">Recommended Videos</string>
    <string name="backResult">Back</string>

</resources>