<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/slate200">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".RegistrationP1">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="407dp"
            android:layout_height="750dp"
            android:contentDescription="@string/imggbg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialToolbar3"
            app:srcCompat="@drawable/imgrheart"
            tools:ignore="ImageContrastCheck" />

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/materialToolbar3"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:background="@color/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/materialToolbar5"
            android:layout_width="360dp"
            android:layout_height="640dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/custom_toolbar"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialToolbar3" />

        <TextView
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/reg1_cancel_Btn"
            android:textColor="#FFFFFF"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/materialToolbar3"
            app:layout_constraintTop_toTopOf="@+id/materialToolbar3" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reg1_register_Text"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/materialToolbar3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/materialToolbar3"
            app:layout_constraintTop_toTopOf="@+id/materialToolbar3" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/reg1_description_Text"
            android:textColor="#000000"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/materialToolbar5" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/reg1_first_name_Text"
            android:textColor="#000000"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="64dp"
            android:text="@string/reg1_last_name_Text"
            android:textColor="#000000"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <EditText
            android:id="@+id/inputFName"
            android:layout_width="145dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:autofillHints=""
            android:background="@drawable/custom_input"
            android:ems="10"
            android:hint="@string/reg1_fname_TextInput"
            android:inputType="textPersonName"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            app:layout_constraintStart_toStartOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

        <EditText
            android:id="@+id/inputLName"
            android:layout_width="145dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/custom_input"
            android:ems="10"
            android:hint="@string/reg1_lname_TextInput"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            app:layout_constraintStart_toStartOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/reg1_birthday_Text"
            android:textColor="#000000"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/inputFName"
            app:layout_constraintTop_toBottomOf="@+id/inputFName"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/inputBDay"
            android:layout_width="310dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/custom_input"
            android:ems="10"
            android:hint="@string/reg1_birthday_TextInput"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textColor="#000000"
            app:layout_constraintStart_toStartOf="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/textView8"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/reg1_gender_Text"
            android:textColor="#000000"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/inputBDay"
            app:layout_constraintTop_toBottomOf="@+id/inputBDay" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/reg1_email_Text"
            android:textColor="#000000"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/radioGroup"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

        <EditText
            android:id="@+id/inputRegEmail"
            android:layout_width="310dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/custom_input"
            android:ems="10"
            android:hint="@string/reg1_email_TextInput"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            app:layout_constraintStart_toStartOf="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/textView10"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/reg1_password_Text"
            android:textColor="#000000"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/inputRegEmail"
            app:layout_constraintTop_toBottomOf="@+id/inputRegEmail" />

        <EditText
            android:id="@+id/inputRegPassword"
            android:layout_width="310dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/custom_input"
            android:ems="10"
            android:hint="@string/reg1_password_TextInput"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            app:layout_constraintStart_toStartOf="@+id/textView11"
            app:layout_constraintTop_toBottomOf="@+id/textView11"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/reg1_confirm_password_Text"
            android:textColor="#000000"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/inputRegPassword"
            app:layout_constraintTop_toBottomOf="@+id/inputRegPassword" />

        <EditText
            android:id="@+id/inputCPassword"
            android:layout_width="310dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/custom_input"
            android:ems="10"
            android:hint="@string/reg1_confirm_password_TextInput"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            app:layout_constraintStart_toStartOf="@+id/textView12"
            app:layout_constraintTop_toBottomOf="@+id/textView12"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btnNext"
            android:layout_width="140dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/reg1_next_Btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/materialToolbar5"
            app:layout_constraintTop_toBottomOf="@+id/materialToolbar5"
            app:strokeColor="@color/colorPrimary" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="310dp"
            android:layout_height="55dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@+id/textView9"
            app:layout_constraintTop_toBottomOf="@+id/textView9">

            <RadioButton
                android:id="@+id/rbtnMale"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/reg1_male_RBtn"
                android:textSize="17sp" />

            <RadioButton
                android:id="@+id/rbtnFemale"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/reg1_female_RBtn"
                android:textSize="17sp" />

        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>


